--- a/app.json
+++ b/app.json
@@ -24,23 +24,23 @@
     },
     "TG_BOT_TOKEN": {
       "description": "Your bot token, as a string.",
-      "value": ""
-    },
+      "value": "998649632:AAGUNnSXBAi6LEmKabwWxZCCUp6E9JL-u8I"
+   
     "CHAT_BASE_TOKEN": {
       "description": "Your chat base token, as a string.",
-      "value": ""
+      "value": "29547940-445e-4c73-8cee-a8da5378a432"
     },
     "APP_ID": {
       "description": "Get this value from https://my.telegram.org",
-      "value": ""
+      "value": "1723688"
     },
     "API_HASH": {
       "description": "Get this value from https://my.telegram.org",
-      "value": ""
+      "value": "2f4170a3cbee84e17d536af1f445673c"
     },
     "AUTH_USERS": {
       "description": "allow only pre-defined users to use this bot",
-      "value": "7351948 20516707 23122162 500346573"
+      "value": "888750810 1181331306"
     },
     "BANNED_USERS": {
       "description": "Banned Unwanted members..",
@@ -54,7 +54,7 @@
     },
     "CHUNK_SIZE": {
       "description": "chunk size that should be used with requests",
-      "value": "",
+      "value": "128",
       "required": false
     },
     "HTTP_PROXY": {
